<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_session"
        android:title="@string/action_new_session"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_paste"
        android:title="@string/action_paste"
        android:icon="@android:drawable/ic_menu_paste"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:icon="@android:drawable/ic_menu_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom" />
</menu>
